fixed margins and gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -6,10 +6,6 @@
   max-width: 944px;
   margin: 0 auto;
 
-  @media (max-width: 487px) {
-    grid-template-columns: repeat(1, auto);
-  }
-
   @media (min-width: 488px) {
     grid-template-columns: repeat(2, auto);
   }
