--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   height: 60px;
   padding: 0 50px;
+  margin-bottom: 50px;
 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
@@ -26,6 +27,10 @@
     color: #060b35;
     list-style: none;
     line-height: 60px;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 20px;
   }
 
   &__link {
